package net.arleth.training.rec.domain;

public enum Difficulty {
    EASY, MODERATE, HARD;
}
